--- a/app/src/main/res/layout/mediaplaybackfragment.xml
+++ b/app/src/main/res/layout/mediaplaybackfragment.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:padding="8sp"
         android:layout_height="80dp"
-        android:background="#80FFFFFF"
+        android:background="#BFFFFFFF"
         android:orientation="horizontal">
 
         <ImageView
@@ -54,23 +54,23 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="28dp"
+        android:layout_height="38dp"
         android:layout_above="@+id/ll_time"
-        android:layout_marginBottom="1dp"
-        android:paddingLeft="15sp"
-        android:paddingRight="15sp"
+
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/repeat"
             android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="15sp"
             app:srcCompat="@drawable/ic_repeat_white" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/shuffle"
             android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="15sp"
             android:layout_alignParentRight="true"
             app:srcCompat="@drawable/ic_shuffle_white" />
 
@@ -83,20 +83,26 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_above="@+id/ll_bottom"
-        android:background="#80FFFFFF"
+        android:background="#BFFFFFFF"
         android:orientation="horizontal">
+
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="10dp"
+            android:progressDrawable="@drawable/progress"
+            android:thumb="@drawable/thumb"
             />
 
         <TextView
+            android:id="@+id/Time1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/seekBar"
             android:layout_marginLeft="8sp"
-            android:text="@string/time_1"></TextView>
+            android:text="@string/time_1">
+
+        </TextView>
 
         <TextView
             android:id="@+id/Time2"
@@ -116,7 +122,7 @@
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:background="#80FFFFFF"
+        android:background="#BFFFFFFF"
         android:paddingLeft="15sp"
         android:paddingRight="15sp"
         android:layout_alignParentBottom="true"
