--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative1"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp">
     <RelativeLayout
@@ -60,27 +59,23 @@
             android:id="@+id/previous_ntf"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="30dp"
-            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@id/play_ntf"
             app:srcCompat="@drawable/ic_rew_dark" />
 
         <ImageView
             android:id="@+id/play_ntf"
             android:layout_width="50sp"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="-2dp"
-            android:layout_marginBottom="1dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_toLeftOf="@+id/next_ntf"
             app:srcCompat="@drawable/ic_baseline_pause_circle_filled_24" />
 
         <ImageView
             android:id="@+id/next_ntf"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             app:srcCompat="@drawable/ic_fwd_dark" />
 
