--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_land"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:layout="@+id/activity_main"
+    android:orientation="horizontal"
+    tools:context=".MainActivity">
+
+
+    <FrameLayout
+        android:id="@+id/fragmentSongOne"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="horizontal"
-        android:id="@+id/layout_land"
-        android:layout="@+id/activity_main"
-        android:baselineAligned="false">
+        android:layout_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
-        <FrameLayout
-            android:id="@+id/fragmentSongOne"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+    </FrameLayout>
 
-
-        </FrameLayout>
     <FrameLayout
         android:id="@+id/fragmentMediaTwo"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
 
     </FrameLayout>
 
 
-    </LinearLayout>
+
+</LinearLayout>
 
