--- a/app/src/main/res/menu/nav_header.xml
+++ b/app/src/main/res/menu/nav_header.xml
@@ -9,9 +9,10 @@
     android:gravity="bottom">
 
     <TextView
-        android:layout_width="match_parent"
+
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Navigation"
+        android:text="@string/my_navigation"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </LinearLayout>
