--- a/app/src/main/res/layout/mediaplaybackfragment.xml
+++ b/app/src/main/res/layout/mediaplaybackfragment.xml
@@ -43,11 +43,20 @@
             app:srcCompat="@drawable/ic_queue_dark" />
 
         <ImageView
+            android:id="@+id/queue_music"
+            android:layout_width="40sp"
+            android:layout_height="50sp"
+            android:layout_marginVertical="10sp"
+            android:layout_marginEnd="2dp"
+            android:layout_toLeftOf="@+id/mnMedia"
+            android:visibility="visible"
+            app:srcCompat="@drawable/ic_queue_dark" />
+        <ImageView
             android:id="@+id/mnMedia"
             android:layout_width="40sp"
             android:layout_height="50sp"
             android:layout_alignParentEnd="true"
-            android:layout_marginVertical="20sp"
+            android:layout_marginVertical="10sp"
             android:layout_marginEnd="2dp"
             app:srcCompat="@drawable/ic_more_vert" />
     </RelativeLayout>
