--- a/app/src/main/res/layout/mediaplaybackfragment.xml
+++ b/app/src/main/res/layout/mediaplaybackfragment.xml
@@ -6,35 +6,50 @@
     android:id="@+id/picture_big"
     android:background="#FFFF">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/image_changer"
+        android:visibility="gone"></ImageView>
     <RelativeLayout
         android:id="@+id/op"
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
-        android:padding="8sp"
-        android:layout_height="80dp"
+        android:layout_height="70dp"
         android:background="#BFFFFFFF"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="5dp"
             android:id="@+id/picture_small"
-            android:layout_width="85dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
 
         <TextView
             android:id="@+id/song1"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_width="230dp"
+            android:layout_height="25dp"
             android:layout_toRightOf="@+id/picture_small"
-            android:text="TextView" />
+            android:text="TextView"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="3dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="#000000"/>
         <TextView
             android:id="@+id/artist1"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_width="230dp"
+            android:layout_height="25dp"
+            android:paddingLeft="5dp"
             android:layout_below="@+id/song1"
             android:layout_toRightOf="@+id/picture_small"
-            android:text="TextView" />
+            android:text="TextView"
+            android:maxLines="1"
+            android:ellipsize="end"
+            />
 
 
         <ImageView
@@ -52,18 +67,19 @@
         <ImageView
             android:id="@+id/queue_music"
             android:layout_width="40sp"
-            android:layout_height="50sp"
-            android:layout_marginVertical="10sp"
+            android:layout_height="40sp"
+            android:layout_marginVertical="15sp"
             android:layout_marginEnd="2dp"
+
             android:layout_toLeftOf="@+id/mnMedia"
             android:visibility="visible"
             app:srcCompat="@drawable/ic_queue_dark" />
         <ImageView
             android:id="@+id/mnMedia"
             android:layout_width="40sp"
-            android:layout_height="50sp"
+            android:layout_height="40sp"
             android:layout_alignParentEnd="true"
-            android:layout_marginVertical="10sp"
+            android:layout_marginVertical="15sp"
             android:layout_marginEnd="2dp"
             app:srcCompat="@drawable/ic_more_vert" />
     </RelativeLayout>
@@ -72,22 +88,31 @@
         android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_above="@+id/ll_time"
-
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/repeat"
             android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="15sp"
+            android:layout_height="30dp"
+            android:layout_marginRight="160dp"
+            android:layout_toLeftOf="@+id/center1"
+            app:srcCompat="@drawable/ic_repeat_white"
             />
+        <TextView
+            android:id="@+id/center1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            ></TextView>
+
 
         <ImageView
             android:id="@+id/shuffle"
             android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="15sp"
-            android:layout_alignParentRight="true"
+            android:layout_height="30dp"
+            android:layout_marginLeft="160dp"
+            android:layout_toRightOf="@+id/center1"
+            app:srcCompat="@drawable/ic_shuffle_white"
              />
 
     </RelativeLayout>
@@ -117,18 +142,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/seekBar"
-            android:layout_marginLeft="8sp"
+            android:layout_marginRight="170dp"
+            android:layout_toLeftOf="@+id/center"
             android:text="@string/time_1">
 
         </TextView>
+        <TextView
+            android:id="@+id/center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            ></TextView>
 
         <TextView
             android:id="@+id/Time2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginRight="8sp"
             android:layout_below="@+id/seekBar"
-            android:layout_alignParentRight="true"
+            android:layout_marginLeft="170dp"
+            android:layout_toRightOf="@+id/center"
             android:text="@string/time_2">
         </TextView>
 
@@ -151,43 +183,29 @@
             android:layout_width="30dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_thumbs_up_default"
-            android:contentDescription="TODO" />
+            android:layout_toLeftOf="@+id/play_return"
+            android:layout_marginRight="50dp" />
 
         <ImageView
             android:id="@+id/play_return"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_alignStart="@+id/play_pause_media"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="-35dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:layout_toRightOf="@+id/like"
+            android:layout_toLeftOf="@+id/play_pause_media"
+            android:layout_marginRight="35dp"
             app:srcCompat="@drawable/ic_rew_dark" />
 
         <ImageView
             android:id="@+id/play_pause_media"
-            android:layout_width="50sp"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="155dp"
-            android:layout_marginEnd="155dp"
-            android:layout_marginBottom="-5dp"
+            android:layout_centerInParent="true"
             app:srcCompat="@drawable/ic_baseline_pause_circle_filled_24" />
 
         <ImageView
             android:id="@+id/play_next"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="-2dp"
-            android:layout_marginLeft="-150dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="35dp"
             android:layout_toRightOf="@+id/play_pause_media"
             app:srcCompat="@drawable/ic_fwd_dark" />
 
@@ -195,7 +213,8 @@
             android:id="@+id/dislike"
             android:layout_width="30dp"
             android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
+            android:layout_marginLeft="50dp"
+            android:layout_toRightOf="@+id/play_next"
             app:srcCompat="@drawable/ic_thumbs_down_default" />
 
     </RelativeLayout>
