--- a/app/src/main/res/layout/allsongsfragment.xml
+++ b/app/src/main/res/layout/allsongsfragment.xml
@@ -32,14 +32,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/picture"
-                    android:layout_margin="10dp"
                     android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/title"
+                            android:textSize="18dp"
                             android:layout_width="230dp"
-                            android:layout_height="25sp"
+                            android:layout_height="35sp"
                             android:text="TextView"
+                            android:paddingTop="10dp"
+                            android:paddingLeft="5dp"
                             android:maxLines="1"
                             android:ellipsize="end"
                             android:textColor="#000000"/>
@@ -50,6 +52,8 @@
                             android:layout_height="25sp"
                             android:layout_below="@+id/title"
                             android:text="TextView"
+                            android:textSize="14dp"
+                            android:paddingLeft="5dp"
                             android:maxLines="1"
                             android:ellipsize="end"/>
 
