--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,9 +12,9 @@
         android:layout_height="40sp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="20sp"
         android:gravity="center"
         android:visibility="gone"
-        android:layout_marginLeft="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,46 +25,47 @@
         android:id="@+id/STT"
         android:layout_width="70sp"
         android:layout_height="70sp"
-        android:paddingTop="20sp"
         android:paddingLeft="10dp"
+        android:paddingTop="20sp"
         android:text="@string/STT"
         android:textAlignment="center"
-        android:visibility="visible"
+        android:textSize="14sp"
+        android:visibility="visible"></TextView>
+
+    <TextView
+        android:id="@+id/music"
+        android:layout_width="match_parent"
+        android:layout_height="35sp"
+        android:layout_marginRight="40dp"
+        android:layout_toRightOf="@id/STT"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingLeft="5dp"
+        android:paddingTop="10sp"
+        android:text="@string/music"
+        android:textColor="#000000"
+        android:textSize="18sp"></TextView>
+
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="wrap_content"
+        android:layout_height="20sp"
+        android:layout_below="@id/music"
+        android:layout_toRightOf="@id/STT"
+        android:paddingLeft="5sp"
+        android:paddingRight="5dp"
+        android:text="@string/time"
         android:textSize="14sp"></TextView>
-
-        <TextView
-            android:id="@+id/music"
-            android:layout_width="280dp"
-            android:layout_height="35sp"
-            android:paddingTop="10sp"
-            android:paddingLeft="5dp"
-            android:text="@string/music"
-            android:layout_toRightOf="@id/STT"
-            android:textSize="18sp"
-            android:textColor="#000000"
-            android:maxLines="1"
-            android:ellipsize="end"></TextView>
-
-        <TextView
-            android:id="@+id/tvTime"
-            android:layout_width="wrap_content"
-            android:layout_height="20sp"
-            android:paddingLeft="5sp"
-            android:paddingRight="5dp"
-            android:text="@string/time"
-            android:layout_below="@id/music"
-            android:layout_toRightOf="@id/STT"
-            android:textSize="14sp"></TextView>
-
 
 
     <ImageView
         android:id="@+id/menu_pop"
-        android:layout_width="30sp"
-        android:layout_height="70sp"
+        android:layout_width="30dp"
+        android:layout_height="60dp"
         android:layout_alignParentRight="true"
+
         app:srcCompat="@drawable/ic_more_vert" />
 
-    </RelativeLayout>
+</RelativeLayout>
 
 
